fix(layout): fix layout inconsistencies with spacing

--- a/public/style/scss/_sidebar.scss
+++ b/public/style/scss/_sidebar.scss
@@ -4,6 +4,7 @@
   top: 0px;
   right: 0px;
   height: 100%;
+  min-height: 800px;
   z-index: 10;
   &:before {
     content: "";
